cp project/force-app/main/default/objects/Cancellation__c/Cancellation__c.object-meta.xml
<CustomObject>
    <description>Booking cancellation workflow. 2-Tier approval: Sales Head -&gt; CRM Manager.</description>
    <label>Cancellation</label>
    <nameField>
        <displayFormat>CNC-{0000}</displayFormat>
        <label>Cancellation Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>