cp project/force-app/main/default/objects/Cancellation__c/fields/Cancellation_Document__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations_Doc</relationshipName>
    <type>Lookup</type>
</CustomField>