cp project/force-app/main/default/objects/Cancellation__c/fields/Cancellation_Ref__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Ref__c</fullName>
    <label>Cancellation Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>