cp project/force-app/main/default/objects/Cancellation__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>