cp project/force-app/main/default/objects/Cancellation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Sales Head Approval</fullName>
            </value>
            <value>
                <fullName>CRM Manager Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending CRM Manager</fullName>
                <isActive>false</isActive>
                <label>Pending CRM Manager</label>
            </value>
            <value>
                <fullName>Pending Sales Head</fullName>
                <isActive>false</isActive>
                <label>Pending Sales Head</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>