cp project/force-app/main/default/objects/Cancellation__c/validationRules/Cannot_Cancel_After_Registration.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Cancel_After_Registration</fullName>
    <active>true</active>
    <description>Golden Rule Violation: Cancellation is not allowed after Registration stage.</description>
    <errorConditionFormula>OR(ISPICKVAL(Booking__r.Stage__c, &quot;Registration&quot;), ISPICKVAL(Booking__r.Stage__c, &quot;Handover&quot;), ISPICKVAL(Booking__r.Stage__c, &quot;Completed&quot;))</errorConditionFormula>
    <errorMessage>Golden Rule Violation: Cancellation is not allowed after Registration stage.</errorMessage>
</ValidationRule>